--- a/clase 1/index.html
+++ b/clase 1/index.html
@@ -43,13 +43,21 @@
     <section>
         <h1>MARIPOSA</h1>
         <img src="img/Mariposa.png" width="230" height="230" alt="imagen mariposa">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis eius placeat optio vero. Laboriosam quam harum consequuntur ea amet deleniti molestiae quibusdam molestias nostrum dolorum voluptates repellendus ducimus, voluptatibus blanditiis impedit quia rem laudantium labore animi. Dolore non, placeat aspernatur nostrum, veniam laudantium at nam quos obcaecati quis quibusdam impedit corrupti optio voluptatum cum expedita? Deleniti veniam nesciunt molestias quidem itaque quae quibusdam distinctio consectetur, quas ipsum illum temporibus velit harum explicabo maiores optio inventore suscipit ullam fugiat, corporis consequuntur reprehenderit amet! Necessitatibus illo corporis laboriosam architecto, ullam, dolorem quo harum numquam amet, dolores repellendus tempora dolor in illum accusamus.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis eius placeat optio vero. Laboriosam quam
+            harum consequuntur ea amet deleniti molestiae quibusdam molestias nostrum dolorum voluptates repellendus
+            ducimus, voluptatibus blanditiis impedit quia rem laudantium labore animi. Dolore non, placeat aspernatur
+            nostrum, veniam laudantium at nam quos obcaecati quis quibusdam impedit corrupti optio voluptatum cum
+            expedita? Deleniti veniam nesciunt molestias quidem itaque quae quibusdam distinctio consectetur, quas ipsum
+            illum temporibus velit harum explicabo maiores optio inventore suscipit ullam fugiat, corporis consequuntur
+            reprehenderit amet! Necessitatibus illo corporis laboriosam architecto, ullam, dolorem quo harum numquam
+            amet, dolores repellendus tempora dolor in illum accusamus.</p>
     </section>
 
+d
+d
+d
 
-
-
-
+hola 
 
 
 
